[package]
name = "my-project"
version = "0.1.0"
authors = ["heechan <ryanhe4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glu-sys = "0.1.4"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
# default-features = false